--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AvoCare</string>
-    <string name="mainTvTitulo">Sistema Inteligente para la Gestion Integral de la Salud de los Aguacates</string>
+    <string name="mainTvTitulo">Sistema Inteligente para la Gestión Integral de la Salud de los Aguacates</string>
     <string name="mainBtnLogin">Iniciar sesión</string>
     <string name="mainTvNoTienesCuenta">¿No tienes una cuenta?</string>
     <string name="mainTvCrearCuenta">Crear cuenta</string>
@@ -31,28 +31,28 @@
     <string name="mishuertosTvNumPronosticos">3</string>
     <string name="saludhuertoTvSalud">Salud del Huerto</string>
     <string name="saludhuertoTvNomHuerto">Cerritos</string>
-    <string name="saludhuertoBtnAlertEnfer">Alerta Enfermedades</string>
-    <string name="saludhuertoBtnAlertPlagas">Alerta Plagas</string>
-    <string name="saludhuertoBtnPron">Pronostico a 15 dias</string>
-    <string name="saludhuertoBtnPlan">Planeacion</string>
-    <string name="saludhuertoBtnImagenes">Visor Imagenes</string>
+    <string name="saludhuertoBtnAlertEnfer">Alertas Enfermedades</string>
+    <string name="saludhuertoBtnAlertPlagas">Alertas Plagas</string>
+    <string name="saludhuertoBtnPron">Pronostico a 15 días</string>
+    <string name="saludhuertoBtnPlan">Planeación</string>
+    <string name="saludhuertoBtnImagenes">Visor de Imágenes</string>
     <string name="addhuertoBtnVariedad">Variedad</string>
     <string name="addhuertoBtnMerObj">Mercado Objetivo</string>
     <string name="addhuertoBtnRiego">Tipo de Riego</string>
     <string name="addhuertoBtnEtapa">Etapa Fenológica</string>
     <string name="addhuertoTvTitulo">Detalles del Huerto</string>
-    <string name="addhuertoTvInstruccion">Proporciona la siguiente informacion de tu huerto:</string>
-    <string name="detallenutrimentalTvTitulo">Plagas Cuarentenarias</string>
-    <string name="detallenutrimentalTvInstruccion">¿Cual de las siguientes plahas haz tenido presencia cercas de tu huerto?</string>
+    <string name="addhuertoTvInstruccion">Proporciona la siguiente información de tu huerto:</string>
+    <string name="detallenutrimentalTvTitulo">Plagas Cuarentenarías</string>
+    <string name="detallenutrimentalTvInstruccion">¿Cuál de las siguientes plagas has tenido presencia cercas de tu huerto?</string>
     <string name="detallenutrimentalBtnVariedad">Barrenador pequeño hueso</string>
     <string name="detallenutrimentalBtnBph">Barrenador pequeño hueso</string>
     <string name="detallenutrimentalBtnBtr">Barrenador tronco y ramas</string>
     <string name="detallenutrimentalBtnBgh">Barrenador grande del hueso</string>
     <string name="detallenutrimentalBtnPba">Palomilla barrenadora del aguacate</string>
-    <string name="planeacionTvTitulo">Planeacion</string>
+    <string name="planeacionTvTitulo">Planeación</string>
     <string name="planeacionTvInstruccion">Actividades recomendadas</string>
     <string name="pronosticoTvTitulo">Pronostico</string>
-    <string name="pronosticoTvInstruccion">Las condiciones dentro de 15 dias seran propicias para:</string>
+    <string name="pronosticoTvInstruccion">Las condiciones dentro de 15 días serán propicias para:</string>
     <string name="pronosticoBtnMb">Mosquita blanca</string>
     <string name="pronosticoBtnGt">Gusano telarañero</string>
     <string name="pronosticoBtnAr">Acaro Rojo</string>
@@ -63,21 +63,21 @@
     <string name="alertaBtnAranaRoja">Araña roja</string>
     <string name="alertaBtnAranaCris">Araña cristalina</string>
     <string name="alertaBtnBarrenador">Barrenador</string>
-    <string name="detallenutrimentalTvTituloHint">Detalles nutrimentales</string>
-    <string name="detallenutrimentalTvInstruccionHint">¿Cuando fue la ultima vez que fertilizaste con?:</string>
-    <string name="plagasCTvTitulo">Plagas Cuarentenarias</string>
-    <string name="plagasCTvInstruccion">¿Cual de las siguientes plagas haz tenido presencia cerca de tu huerto?</string>
+    <string name="detallenutrimentalTvTituloHint">Detalle nutrimental</string>
+    <string name="detallenutrimentalTvInstruccionHint">¿Cuándo fue la última vez que fertilizaste con?:</string>
+    <string name="plagasCTvTitulo">Plagas Cuarentenarías</string>
+    <string name="plagasCTvInstruccion">¿Cuál de las siguientes plagas has tenido presencia cerca de tu huerto?</string>
     <string name="plagasCBtnBph">Barrenador pequeño hueso</string>
     <string name="plagasCBtnBtr">Barrenador tronco y ramas</string>
     <string name="plagasCBtnBgh">Barrenado grande del hueso</string>
-    <string name="plagasCBtnPba">Palomilla barrenadora del agucate</string>
+    <string name="plagasCBtnPba">Palomilla barrenadora del aguacate</string>
     <string name="detallenutrimentalBtnNitrogeno">Nitrógeno</string>
     <string name="detallenutrimentalBtnFosforo">Fósforo</string>
     <string name="detallenutrimentalBtnPotasio">Potasio</string>
     <string name="detallenutrimentalBtnMag">Magnesio</string>
     <string name="detallenutrimentalBtnCalcio">Calcio</string>
-    <string name="mishuertosAlertDialogBackTitle">¿Que desea hacer?</string>
-    <string name="mishuertosAlertDialogMessage">Esta a punto de abandonar esta pantalla Seleccione una opcion</string>
-    <string name="mishuertosAlertDialogBackNegativeTitle">Cerrar Sesion</string>
+    <string name="mishuertosAlertDialogBackTitle">¿Qué desea hacer?</string>
+    <string name="mishuertosAlertDialogMessage">Está a punto de abandonar esta pantalla Seleccione una opción</string>
+    <string name="mishuertosAlertDialogBackNegativeTitle">Cerrar Sesión</string>
     <string name="mishuertosAlertDialogBackPositiveTitle">Cerrar App</string>
 </resources>
